--- a/app/src/main/res/layout/activity_manager_followed.xml
+++ b/app/src/main/res/layout/activity_manager_followed.xml
@@ -6,12 +6,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackHome">
+        android:background="@color/colorBackHome"
+        tools:context=".user.following.UserFollowingActivity">
 
         <RelativeLayout
             android:id="@+id/rlHeader"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -22,53 +23,151 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:padding="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_18sdp"
                 android:src="@drawable/back_arrow"
                 tools:ignore="RtlCompat" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgAccountProfile"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
+                android:layout_marginBottom="@dimen/_18sdp"
+                android:src="@drawable/place_holder" />
         </RelativeLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvUserFollowingCount"
+            android:id="@+id/tvTitlePeopleClub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_12sdp"
+            android:layout_marginStart="@dimen/_18sdp"
             android:includeFontPadding="false"
-            android:text="0 Followed"
-            android:textColor="@color/white"
+            android:text="@string/people"
+            android:textColor="@color/colorPink88"
             android:textSize="@dimen/_12ssp"
-            app:fontFamily="@font/poppins_light"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rlHeader"
-            tools:ignore="RtlCompat" />
-
+            app:fontFamily="@font/roboto_medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rlHeader" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvUserFollowingSortBy"
+            android:id="@+id/tvTitleFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginEnd="@dimen/_12sdp"
-            android:drawableEnd="@drawable/sort_a_z"
-            android:drawablePadding="@dimen/_12sdp"
+            android:layout_marginStart="@dimen/_18sdp"
             android:includeFontPadding="false"
-            android:text="@string/sort_by"
+            android:text="@string/following"
             android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp"
-            app:fontFamily="@font/poppins_light"
+            android:textSize="@dimen/_25ssp"
+            app:fontFamily="@font/roboto_medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitlePeopleClub" />
+
+        <LinearLayout
+            android:id="@+id/linearFollowingSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_18sdp"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
+            android:background="@drawable/back_search_round"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingTop="@dimen/_7sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_7sdp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvUserFollowingCount"
-            tools:ignore="RtlCompat" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitleFollowing">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search_white" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edtSearchManager"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:fontFamily="@font/roboto_regular"
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:includeFontPadding="true"
+                android:lines="1"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="@dimen/_11ssp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rlTop" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearCountNSort"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_18sdp"
+            android:paddingTop="@dimen/_18sdp"
+            android:paddingEnd="@dimen/_18sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearFollowingSearch">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:text="@string/following"
+                    android:textColor="@color/white"
+                    app:fontFamily="@font/roboto_regular" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvUserFollowingCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_14ssp"
+                    app:fontFamily="@font/roboto_bold"
+                    tools:text="1" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgUserFollowingSort"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sort_a_z" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerManagerFollowed"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvUserFollowingSortBy"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="@dimen/_12sdp"
             android:clipToPadding="false"
-            android:overScrollMode="never"/>
+            android:overScrollMode="never"
+            android:padding="@dimen/_18sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearCountNSort" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
