--- a/app/src/main/res/drawable/back_border_grey.xml
+++ b/app/src/main/res/drawable/back_border_grey.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid
-        android:color="@color/colorWhite4D"/>
+    <stroke
+        android:width="1dp"
+        android:color="#E1E1E1" />
+
     <corners
-        android:radius="@dimen/_10sdp"/>
+        android:radius="@dimen/_8sdp"/>
 </shape>
