--- a/app/src/main/res/layout/item_user_following.xml
+++ b/app/src/main/res/layout/item_user_following.xml
@@ -3,32 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_12sdp"
-        android:elevation="@dimen/_10sdp"
-        app:cardBackgroundColor="@color/colorBackHome"
-        app:cardCornerRadius="@dimen/_8sdp"
-        app:cardElevation="@dimen/_10sdp">
     <LinearLayout
         android:id="@+id/linearViewSentRequest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:background="@drawable/back_login_selection_main"
+        android:backgroundTint="@color/colorWhite1A"
         android:gravity="center_vertical"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_10sdp">
+        android:orientation="horizontal"
+        android:padding="@dimen/_7sdp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgUserProfile"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:src="@drawable/place_holder"
-            />
+            android:src="@drawable/place_holder" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -41,39 +31,42 @@
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User Name"
-                app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
+                android:text="User Name"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_14ssp"
-                android:textColor="@color/white" />
+                app:fontFamily="@font/roboto_regular" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvUserdata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Description"
-                app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
-                android:textSize="@dimen/_8ssp"
                 android:textColor="@color/white"
-                android:visibility="gone"/>
+                android:textSize="@dimen/_8ssp"
+                android:visibility="gone"
+                app:fontFamily="@font/roboto_regular"
+                tools:text="Description" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvFollow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="RtlCompat"
-            android:text="@string/followed"
-            android:textSize="@dimen/_10ssp"
-            app:fontFamily="@font/poppins_medium"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@drawable/back_round_black"
+            android:backgroundTint="@color/colorWhite1A"
             android:includeFontPadding="false"
-            android:textColor="@color/white"
+            android:paddingStart="@dimen/_12sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:text="@string/followed"
             android:textAlignment="center"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:background="@drawable/back_border_white"/>
+            android:textColor="@color/colorPink88"
+            android:textSize="@dimen/_10ssp"
+            app:fontFamily="@font/roboto_regular"
+            tools:ignore="RtlCompat" />
     </LinearLayout>
-    </androidx.cardview.widget.CardView>
 </layout>
