--- a/app/src/main/res/drawable/back_gradient.xml
+++ b/app/src/main/res/drawable/back_gradient.xml
@@ -3,9 +3,9 @@
     xmlns:android = "http://schemas.android.com/apk/res/android" >
 
     <gradient
-        android:startColor = "#191A1F"
-        android:centerColor = "#03191A1F"
-        android:endColor = "@color/transparent"
+        android:startColor = "@color/colorBlack20"
+        android:centerColor = "@color/colorBlack26"
+        android:endColor = "@color/colorBlack20"
         android:angle = "90"
         android:type = "linear" />
 </shape>
