--- a/app/src/main/res/drawable/ic_time.xml
+++ b/app/src/main/res/drawable/ic_time.xml
@@ -1,5 +1,12 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8zM11.78,7h-0.06c-0.4,0 -0.72,0.32 -0.72,0.72v4.72c0,0.35 0.18,0.68 0.49,0.86l4.15,2.49c0.34,0.2 0.78,0.1 0.98,-0.24 0.21,-0.34 0.1,-0.79 -0.25,-0.99l-3.87,-2.3L12.5,7.72c0,-0.4 -0.32,-0.72 -0.72,-0.72z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="25dp"
+    android:height="25dp"
+    android:viewportWidth="25"
+    android:viewportHeight="25">
+  <path
+      android:pathData="M12.5,0C5.6076,0 0,5.6076 0,12.5C0,19.3924 5.6076,25 12.5,25C19.3924,25 25,19.3924 25,12.5C25,5.6076 19.3924,0 12.5,0ZM12.5,23.4375C6.469,23.4375 1.5625,18.531 1.5625,12.5C1.5625,6.469 6.469,1.5625 12.5,1.5625C18.531,1.5625 23.4375,6.469 23.4375,12.5C23.4375,18.531 18.531,23.4375 12.5,23.4375Z"
+      android:fillColor="#883AD9"/>
+  <path
+      android:pathData="M13.2813,4.6875H11.7188V12.8235L16.6351,17.7398L17.7399,16.6351L13.2813,12.1765V4.6875Z"
+      android:fillColor="#883AD9"/>
 </vector>
