--- a/app/src/main/res/layout/activity_manager_edit_event_new.xml
+++ b/app/src/main/res/layout/activity_manager_edit_event_new.xml
@@ -140,8 +140,9 @@
 
                             <androidx.appcompat.widget.AppCompatEditText
                                 android:id="@+id/editEventTime"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:layout_marginStart="@dimen/_8sdp"
                                 android:background="@color/transparent"
                                 android:editable="false"
@@ -197,28 +198,38 @@
                         android:textSize="@dimen/_12ssp"
                         app:fontFamily="@font/roboto_regular" />
 
-                    <FrameLayout
-                        android:id="@+id/frameMap"
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_150sdp"
-                        android:layout_marginTop="@dimen/_25sdp">
+                        android:layout_marginTop="@dimen/_25sdp"
+                        android:clipToPadding="false"
+                        app:cardElevation="0dp"
+                        android:elevation="0dp"
+                        app:cardCornerRadius="@dimen/_15sdp">
 
-                        <fragment
-                            android:id="@+id/map"
-                            android:name="com.jaylax.wiredshack.utils.AppMapView"
+                        <FrameLayout
+                            android:id="@+id/frameMap"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent">
 
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/imageCurrentLocation"
-                            android:layout_width="@dimen/_30sdp"
-                            android:layout_height="@dimen/_30sdp"
-                            android:layout_gravity="end|bottom"
-                            android:layout_margin="@dimen/_15sdp"
-                            android:src="@drawable/ic_current_location_add"
-                            android:visibility="gone" />
+                            <fragment
+                                android:id="@+id/map"
+                                android:name="com.jaylax.wiredshack.utils.AppMapView"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
 
-                    </FrameLayout>
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/imageCurrentLocation"
+                                android:layout_width="@dimen/_30sdp"
+                                android:layout_height="@dimen/_30sdp"
+                                android:layout_gravity="end|bottom"
+                                android:layout_margin="@dimen/_15sdp"
+                                android:src="@drawable/ic_current_location_add"
+                                android:visibility="gone" />
+
+                        </FrameLayout>
+                    </androidx.cardview.widget.CardView>
+
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/editEventLocation"
                         android:layout_width="match_parent"
