--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,205 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackHome"
-    tools:context=".user.search.SearchFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
-        android:id="@+id/rlTop"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorBackHome"
+        tools:context=".user.search.SearchFragment">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
-            android:src="@drawable/toplogo" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/linearSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rlTop"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:background="@drawable/back_search_round"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:gravity="center_vertical">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/search_white" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edtSearchManager"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rlTop"
-            android:background="@color/transparent"
-            android:fontFamily="@font/poppins_medium"
-            android:includeFontPadding="true"
-            android:textSize="@dimen/_12ssp"
-            android:lines="1"
-            android:imeOptions="actionSearch"
-            android:layout_weight="1"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:hint="@string/search_by_event_organiser"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:textColorHint="@color/colorHintTex"
-            android:maxLines="1"
-            android:textColor="@color/white"/>
-
-    </LinearLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollSearch"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearSearch"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:fillViewport="true"
-        android:overScrollMode="never">
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/rlHeader"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgProfileLogout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/suggested_for_you"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_10ssp"
-                app:fontFamily="@font/poppins_medium"
-                android:includeFontPadding="false"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_margin="@dimen/_15sdp"
+                android:padding="@dimen/_10sdp"
+                android:src="@drawable/ic_profile_logout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/white"
-                android:layout_marginTop="@dimen/_5sdp"
-                />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgAccountProfile"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_18sdp"
+                android:layout_marginBottom="@dimen/_18sdp"
+                android:src="@drawable/place_holder" />
+        </RelativeLayout>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvSearchTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_18sdp"
+            android:includeFontPadding="false"
+            android:text="@string/txt_suggested"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_28ssp"
+            app:fontFamily="@font/roboto_medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rlHeader" />
+
+        <LinearLayout
+            android:id="@+id/linearSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_18sdp"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
+            android:background="@drawable/back_search_round"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingTop="@dimen/_7sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_7sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvSearchTitle">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search_white" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edtSearchManager"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:fontFamily="@font/roboto_regular"
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:includeFontPadding="true"
+                android:lines="1"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="@dimen/_11ssp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rlTop" />
+
+        </LinearLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollSearch"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:fillViewport="true"
+            android:overScrollMode="never"
+            android:paddingStart="@dimen/_18sdp"
+            android:paddingTop="@dimen/_18sdp"
+            android:paddingEnd="@dimen/_15sdp"
+            android:paddingBottom="@dimen/_65sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearSearch">
 
             <LinearLayout
-                android:id="@+id/linearSearchByLocation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/_12sdp"
-                android:paddingStart="@dimen/_12sdp"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:background="@drawable/back_search_round"
-                android:paddingTop="@dimen/_5sdp"
-                android:paddingBottom="@dimen/_5sdp"
-                android:gravity="center_vertical"
-                android:layout_marginTop="@dimen/_10sdp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/search_white" />
-
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/edtSearchByLocation"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rlTop"
-                    android:background="@color/transparent"
-                    android:fontFamily="@font/poppins_medium"
-                    android:includeFontPadding="true"
-                    android:textSize="@dimen/_12ssp"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:imeOptions="actionSearch"
-                    android:layout_weight="1"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:hint="@string/search_by_location"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:textColorHint="@color/colorHintTex"
-                    android:textColor="@color/white"
-                    android:editable="false"/>
-
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/frameMap"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_170sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_5sdp">
-
-                <fragment
-                    android:id="@+id/map"
-                    android:name="com.jaylax.wiredshack.utils.AppMapView"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="@dimen/_170sdp"
+                    android:layout_marginEnd="@dimen/_11sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:elevation="0dp"
+                    app:cardCornerRadius="@dimen/_15sdp"
+                    app:cardElevation="0dp">
 
-                <!--<LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.airbnb.lottie.LottieAnimationView
-                        android:id="@+id/animationViewLottie"
+                    <FrameLayout
+                        android:id="@+id/frameMap"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/_30sdp"
-                        android:alpha="0.4"
-                        android:visibility="gone"
-                        app:lottie_fileName="location.json"
-                        app:lottie_loop="true" />
+                        android:layout_height="match_parent">
 
-                </LinearLayout>-->
+                        <fragment
+                            android:id="@+id/map"
+                            android:name="com.jaylax.wiredshack.utils.AppMapView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/imageCurrentLocation"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
-                    android:layout_gravity="end|bottom"
-                    android:layout_margin="@dimen/_15sdp"
-                    android:src="@drawable/ic_current_location_add"
-                    android:visibility="gone"/>
+                        <!--<LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-            </FrameLayout>
+                            <com.airbnb.lottie.LottieAnimationView
+                                android:id="@+id/animationViewLottie"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/_30sdp"
+                                android:alpha="0.4"
+                                android:visibility="gone"
+                                app:lottie_fileName="location.json"
+                                app:lottie_loop="true" />
 
+                        </LinearLayout>-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerSearchSuggestion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_3sdp"
-                android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp"
-                android:clipToPadding="false"
-                android:paddingLeft="@dimen/_10sdp"
-                android:paddingRight="@dimen/_3sdp" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/imageCurrentLocation"
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_gravity="end|bottom"
+                            android:layout_margin="@dimen/_15sdp"
+                            android:src="@drawable/ic_current_location_add"
+                            android:visibility="gone" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    </FrameLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerSearchSuggestion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"/>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
