Design Small changes

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -47,7 +47,7 @@
                     app:fontFamily="@font/roboto_regular" />
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/editLoginEmail"
+                    android:id="@+id/editForgotEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
