--- a/app/src/main/res/layout/fragment_manager_home.xml
+++ b/app/src/main/res/layout/fragment_manager_home.xml
@@ -130,6 +130,7 @@
                             app:fontFamily="@font/roboto_bold" />
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvManagerAboutMe"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_15sdp"
