--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -20,6 +20,16 @@
             android:src="@drawable/place_holder" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvHomeFollowingSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_18sdp"
+            android:includeFontPadding="false"
+            android:text="@string/daily"
+            android:textColor="@color/colorPink88"
+            android:textSize="@dimen/_12ssp"
+            app:fontFamily="@font/roboto_medium" />
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvNotificationHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
