--- a/app/src/main/res/layout/item_event_comment.xml
+++ b/app/src/main/res/layout/item_event_comment.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
+    <!--<androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_12sdp"
         android:elevation="@dimen/_10sdp"
         app:cardBackgroundColor="@color/colorBackHome"
         app:cardCornerRadius="@dimen/_8sdp"
-        app:cardElevation="@dimen/_10sdp">
+        app:cardElevation="@dimen/_10sdp">-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -18,7 +18,10 @@
             android:paddingStart="@dimen/_15sdp"
             android:paddingTop="@dimen/_5sdp"
             android:paddingEnd="@dimen/_15sdp"
-            android:paddingBottom="@dimen/_10sdp">
+            android:paddingBottom="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:background="@drawable/back_login_selection_main"
+            android:backgroundTint="@color/colorWhite1A">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgCommentProfile"
@@ -44,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="User Name"
-                    app:fontFamily="@font/poppins_medium"
+                    app:fontFamily="@font/roboto_medium"
                     android:textSize="@dimen/_13ssp"
                     android:includeFontPadding="false"
                     android:textColor="@color/white" />
@@ -75,10 +78,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2 Hours Ago"
-                    app:fontFamily="@font/poppins_light"
+                    app:fontFamily="@font/roboto_light"
                     android:textSize="@dimen/_10ssp"
                     android:includeFontPadding="false"
-                    android:textColor="@color/colorHintTex"
+                    android:textColor="@color/colorPink88"
                     android:layout_marginEnd="@dimen/_5sdp"/>
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -86,6 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/comment_options"
+                    app:tint="@color/white"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingBottom="@dimen/_5sdp"/>
             </LinearLayout>
@@ -103,11 +107,11 @@
                 android:text="@string/dummy_event_comment"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_11ssp"
-                app:fontFamily="@font/poppins_light"
+                app:fontFamily="@font/roboto_light"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imgCommentProfile"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 </layout>
