--- a/app/src/main/res/layout/item_user_following.xml
+++ b/app/src/main/res/layout/item_user_following.xml
@@ -44,9 +44,10 @@
                 android:includeFontPadding="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_8ssp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:fontFamily="@font/roboto_regular"
-                tools:text="Description" />
+                tools:text="Description"
+                android:layout_marginTop="@dimen/_3sdp"/>
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
