--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -37,59 +37,13 @@
                     android:textSize="@dimen/_28ssp"
                     app:fontFamily="@font/roboto_medium" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/relativeUpcomingEvent"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerHomeUpcomingEvent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_18sdp">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/imgUpcomingEvent"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_180sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/place_holder"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/back_event_date_gredient"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:paddingStart="@dimen/_15sdp"
-                        android:paddingTop="@dimen/_12sdp"
-                        android:paddingEnd="@dimen/_15sdp"
-                        android:paddingBottom="@dimen/_12sdp"
-                        app:layout_constraintBottom_toBottomOf="@id/imgUpcomingEvent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/imgUpcomingEvent">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvUpcomingEventDateDay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:includeFontPadding="false"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_8ssp"
-                            app:fontFamily="@font/roboto_medium"
-                            android:text="- - -" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvUpcomingEventDate"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:includeFontPadding="false"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_15ssp"
-                            app:fontFamily="@font/roboto_medium"
-                            android:text="- -" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:clipToPadding="false"
+                    android:overScrollMode="never"
+                    android:nestedScrollingEnabled="false"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvHomeRecentEventTitle"
@@ -113,6 +67,13 @@
                     android:paddingStart="@dimen/_18sdp"
                     android:paddingEnd="@dimen/_13sdp" />
 
+                <me.relex.circleindicator.CircleIndicator2
+                    android:id="@+id/indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:gravity="center_horizontal"
+                    app:ci_drawable="@drawable/ic_indicator_select"
+                    app:ci_drawable_unselected="@drawable/ic_indicator_unselect"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvHomeFollowingSubTitle"
